tests/fixtures/invalid/divmod_dict_bool.py
# Cannot call divmod() with Dict[str, int], Bool
x = divmod({"a": 1}, True)
